--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -59,6 +59,11 @@ body {
   margin-top: 28px;
 }
 
+.scroller{
+  max-height: 450px;
+  overflow-y:scroll; 
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
