--- a/app/views/categorylist.html
+++ b/app/views/categorylist.html
@@ -1,4 +1,12 @@
-<select ng-model="category" ng-change="selectCategory()" 
-  ng-options="category as category.name for category in categories">
-  <option value>Select a Category</option>
-</select>
+<div class="page-header">
+  <i class="fa fa-bars fa-2"></i> Select a Category
+</div>
+<div class="list-group scroller">
+  <div class="list-group-item" ng-repeat="category in categories">
+    <div>
+      <span class="fa fa-plus" ng-click="gotoReportIncident(category.id)"></span>
+      <a ng-click="gotoCategoryList(category.id)">{{category.name}}</a>
+      <span class="fa fa-asterisk pull-right"></span>
+    </div>
+  </div>  
+</div>
