--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,6 +1,9 @@
+<div class="page-header">
+  <h3>Login Page</h3>
+</div>
+
 <div class="row">
   <div class="col-xs-10 col-xs-offset-1">
-    <h5>Login Page</h5>
     <div class="row">
       <form id="loginForm" class="form-horizontal">
           <div class="control-group">
