--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,5 +1,5 @@
-<div class="page-header">
-  <h3>Login Page</h3>
+<div class="app-header">
+  Login Page
 </div>
 
 <div class="row">
@@ -9,13 +9,13 @@
           <div class="control-group">
             <label class="control-label" for="usernameTxt">User Name </label>  
             <div class="controls">
-              <input type="text" id="usernameTxt" name="usernameTxt" ng-model="user.email" />
+              <input type="text" id="usernameTxt" name="usernameTxt" ng-model="user.email" class="form-control" />
             </div>
           </div>
           <div class="control-group">
             <label class="control-label" for="passwordTxt">Password </label>  
             <div class="controls">
-              <input type="password" id="passwordTxt" name="passwordTxt" ng-model="user.password" />
+              <input type="password" id="passwordTxt" name="passwordTxt" ng-model="user.password" class="form-control" />
             </div>
           </div>
           <br/>
