--- a/app/views/newuser.html
+++ b/app/views/newuser.html
@@ -1,5 +1,5 @@
-<div class="page-header">
-  <h3>Sign up Page</h3>
+<div class="app-header">
+  Sign up Page
 </div>
 
 <div class="row">
@@ -9,31 +9,31 @@
           <div class="control-group">
             <label class="control-label" for="emailTxt">Email </label>  
             <div class="controls">
-              <input type="text" id="emailTxt" name="emailTxt" ng-model="user.email" />
+              <input type="text" id="emailTxt" name="emailTxt" ng-model="user.email" class="form-control"/>
             </div>
           </div>
           <div class="control-group">
             <label class="control-label" for="firstNameTxt">First Name </label>  
             <div class="controls">
-              <input type="text" id="firstNameTxt" name="firstNameTxt" ng-model="user.first_name" />
+              <input type="text" id="firstNameTxt" name="firstNameTxt" ng-model="user.first_name" class="form-control"/>
             </div>
           </div>
           <div class="control-group">
             <label class="control-label" for="lastNameTxt">Last Name </label>  
             <div class="controls">
-              <input type="text" id="lastNameTxt" name="lastNameTxt" ng-model="user.last_name" />
+              <input type="text" id="lastNameTxt" name="lastNameTxt" ng-model="user.last_name" class="form-control"/>
             </div>
           </div>
           <div class="control-group">
             <label class="control-label" for="passwordTxt">Password </label>  
             <div class="controls">
-              <input type="password" id="passwordTxt" name="passwordTxt" ng-model="user.password" />
+              <input type="password" id="passwordTxt" name="passwordTxt" ng-model="user.password" class="form-control"/>
             </div>
           </div>
           <div class="control-group">
             <label class="control-label" for="passwordConfirmTxt">Password Confirmation</label>  
             <div class="controls">
-              <input type="password" id="passwordConfirmTxt" name="passwordConfirmTxt" ng-model="user.password_confirmation" />
+              <input type="password" id="passwordConfirmTxt" name="passwordConfirmTxt" ng-model="user.password_confirmation" class="form-control"/>
             </div>
           </div>
           <br/>
