--- a/app/views/categorylist.html
+++ b/app/views/categorylist.html
@@ -1,4 +1,4 @@
-<div class="page-header">
+<div class="app-header">
   <i class="fa fa-bars fa-2"></i> Select a Category
 </div>
 <div class="list-group scroller">
