--- a/app/views/projectmgr.html
+++ b/app/views/projectmgr.html
@@ -1,5 +1,5 @@
-<div class="page-header">
-  <i class="fa fa-bars fa-2"></i> Open Project
+<div class="app-header">
+  <i class="fa fa-book"></i><span class="project-name">Open Project</span>
 </div>
 <div class="container">
   <div class="list-group scroller">
