--- a/app/views/incidentreport.html
+++ b/app/views/incidentreport.html
@@ -6,7 +6,7 @@
   <div class="col-xs-10 col-xs-offset-1">
     <div class="row">
       <form id="reportForm" class="form-horizontal">
-          <div class="control-group has-feedback">
+          <div class="control-group ">
             <label class="control-label" for="typeTxt">Report Type </label>  
             <div class="controls">
               <input type="text" id="typeTxt" name="typeTxt" ng-model="report.report_type" class="form-control"/>
@@ -83,7 +83,7 @@
             <button type="submit" role="submit" class="btn btn-primary">
               Save
             </button>
-            <a href="javascript:void(0);"><i class="fa fa-camera fa-3x" style="vertical-align: middle"></i> </a>
+        </a>
           </div>
       </form>
     </div>
