--- a/app/views/login.html
+++ b/app/views/login.html
@@ -9,7 +9,7 @@
           <div class="control-group">
             <label class="control-label" for="usernameTxt">User Name </label>  
             <div class="controls">
-              <input type="text" id="usernameTxt" name="usernameTxt" ng-model="user.email" class="form-control" />
+              <input type="email" id="usernameTxt" name="usernameTxt" ng-model="user.email" class="form-control" />
             </div>
           </div>
           <div class="control-group">
@@ -23,9 +23,9 @@
             <button type="submit" role="submit" class="btn btn-primary">
               Sign in
             </button>
-            <span class="btn btn-success" ng-click="gotoNewUser()"> Sign up</span>  
           </div>
       </form>
     </div>
+    {{data}}
   </div>
 </div>
