--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,11 +27,15 @@ body {
 
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
-  color: whitesmoke;
-  border-top: 1px solid #e5e5e5;
   background-color: darkgrey;
+  border-top: 1px solid #e5e5e5;
+  color: whitesmoke;
+  text-align: justify;
 }
+
+  .footer  a > i.fa {
+    padding: 0 2px 0 2px;
+  }
 
 /* Customize container */
 @media (min-width: 768px) {
@@ -93,7 +97,7 @@ body {
   font-size: 2.2em;
 }
 .app-header{
-  background-color: darkgrey;
+  background-color: #f26629;
   color: whitesmoke;
   font-size: 1.5em;
   margin-top: -1em;
@@ -111,11 +115,15 @@ body {
 
 .answers {
   position: relative;
-  top: 18em;
+  top: 16em;
+}
+
+.answers > .control-group {
+  padding: 1em;
 }
 
 #sw-wrapper {
-  top: 28em !important;
+  top: 27em !important;
 }
 
 #sw-header {
@@ -128,6 +136,38 @@ body {
   box-sizing: content-box;
 }
 
+.header a,
+.footer a {
+  color: #f26629;
+}
+
+  .header a:hover,
+  .header a:focus,
+  .header a:active,
+  .header a.active,
+  .footer a:hover,
+  .footer a:focus,
+  .footer a:active,
+  .footer a.active{
+    color: #f28e29;
+  }
+
 .sw-center {
   text-align: center;
+}
+
+.btn-primary {
+  color: #ffffff;
+  background-color: #f26629;
+  border-color: #ed5e18;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  color: #ffffff;
+  background-color: #f28e29;
+  border-color: #e27e19;
 }
