--- a/app/views/incidentreport.html
+++ b/app/views/incidentreport.html
@@ -80,7 +80,7 @@
           </div>
           <br/>
           <div class="button-group">
-            <button type="submit" role="submit" class="btn btn-primary">
+            <button type="submit" role="submit" class="btn btn-primary btn-block">
               Save
             </button>
         </a>
