--- a/app/views/newproject.html
+++ b/app/views/newproject.html
@@ -25,7 +25,7 @@
           </div>
           <br/>
           <div class="button-group">
-            <button type="submit" role="submit" class="btn btn-primary">
+            <button type="submit" role="submit" class="btn btn-primary btn-block">
               Save
             </button>
           </div>
