--- a/app/views/login.html
+++ b/app/views/login.html
@@ -23,7 +23,7 @@
           </h4>
           <br/>
           <div class="button-group">
-            <button type="submit" role="submit" class="btn btn-primary btn-block">
+            <button type="submit" role="submit" class="btn btn-primary btn-block" data-loading-text="Validating..." >
               Sign in
             </button>
           </div>
