api integration with categories an questions

--- a/app/views/questionlist.html
+++ b/app/views/questionlist.html
@@ -1,5 +1,5 @@
 <div class="app-header">
-  <i class="fa fa-bars fa-2"></i> Select a Question
+  <i class="fa fa-bars fa-2"></i> Select a Question - {{project.name}}
 </div>
 <div class="answers" ng-show="isQuestionSelected">
     <button type="button" class="btn btn-success btn-block" ng-click="selectAnswer()"><i class="fa fa-circle"></i> Yes</button>
