--- a/app/views/checklist.html
+++ b/app/views/checklist.html
@@ -1,3 +1,3 @@
 <div class="app-header">
-  <i class="fa fa-book"></i><span class="project-name">Open a Check List</span>
+  <i class="fa fa-book"></i><span class="project-name">Open a Check List - {{project.name}}</span>
 </div>
