--- a/app/views/categorylist.html
+++ b/app/views/categorylist.html
@@ -1,3 +1,3 @@
 <div class="app-header">
-  <i class="fa fa-bars fa-2"></i> Select a Category - {{project.name}}
+  <i class="fa fa-bars fa-2"></i> Select a Category
 </div>
