projectmgr initial commit

--- a/app/views/questionlist.html
+++ b/app/views/questionlist.html
@@ -10,7 +10,7 @@
   <div class="control-group">
     <label for="notesTxt" class="control-label">Notes</label>
     <div class="controls">
-      <textarea name="notesTxt" id="notesTxt" class="form-control" rows="4" cols="50">
+      <textarea name="notesTxt" id="notesTxt" class="form-control" ng-model="textModel" rows="4" cols="50">
         
       </textarea>
     </div>
