fix menue buttons

--- a/app/views/checklist.html
+++ b/app/views/checklist.html
@@ -1,3 +1,5 @@
 <div class="app-header">
   <i class="fa fa-book"></i><span class="project-name">Open a Check List</span>
 </div>
+
+  <!-- <a href="javascript:void(0);" style = "float: right;padding-top: 238px;padding-right: 381px;align-items: center;"class="btn btn-default dropdown-toggle" ng-click="createchecklist()">Add New Checklist</a>  -->
