--- a/app/views/questionlist.html
+++ b/app/views/questionlist.html
@@ -1,29 +1,49 @@
+
+
 <div class="app-header">
   <i class="fa fa-bars fa-2"></i> Select a Question
 </div>
-<div class="answers" ng-show="isQuestionSelected">
+
+<div class="answers"  ng-show="isQuestionSelected">
   <div class="btn-group btn-block center">
-    <button type="button" class="btn btn-success col-xs-4" ng-click="selectAnswer('yes')"><i class="fa fa-circle"></i> Yes</button>
-    <button type="button" class="btn btn-danger col-xs-4" ng-click="selectAnswer('no')"><i class="fa fa-circle"></i> No</button>
-    <button type="button" class="btn btn-default col-xs-4" ng-click="selectAnswer('na')"><i class="fa fa-circle"></i> NA</button>
-  </div>
-  <div class="control-group">
-    <label for="notesTxt" class="control-label">Notes</label>
-    <div class="controls">
-      <textarea name="notesTxt" id="notesTxt" class="form-control" ng-model="textModel" rows="4" cols="50">
-        
-      </textarea>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-6 btn-group" data-toggle="buttons" style="text-align: center">
+    <button type="button" class="btn btn-success col-xs-3" ng-click="selectAnswer('yes')"><i class="fa fa-circle"></i> Yes</button>
+    <button type="button" class="btn btn-danger col-xs-3" ng-click="selectAnswer('no')"><i class="fa fa-circle"></i> No</button>
+    <button type="button" class="btn btn-default col-xs-3" ng-click="selectAnswer('na')"><i class="fa fa-circle"></i> NA</button>
+    <div class="col-xs-3 btn-group" data-toggle="buttons" style="text-align: center">
       <button type="button" ng-class="getResolveCss()" ng-click="changeResolve()">
         <i ng-class="getResolveIcon()"></i>{{resolvedStatus}}  
       </button> 
     </div>
-    <div class="col-xs-6">
+    <br><br>
+   
+  </div>
+  <!-- <div class="control-group">
+    <label for="notesTxt" class="control-label">Notes</label>
+    <div class="controls">
+      <textarea name="notesTxt" id="notesTxt" class="form-control" ng-model="textModel" rows="4" cols="20">
+        
+      </textarea>
+    </div>
+  </div> -->
+  <br>
+  <div class="row">
+    <!-- <div class="col-xs-4 btn-group" data-toggle="buttons" style="text-align: center">
+      <button type="button" ng-class="getResolveCss()" ng-click="changeResolve()">
+        <i ng-class="getResolveIcon()"></i>{{resolvedStatus}}  
+      </button> 
+    </div> -->
+    
+    <label class="col-xs-1 control" class="control-label">Notes</label>
+    <div class="control col-xs-7" >
+      <textarea name="notesTxt" id="notesTxt" class="form-control" ng-model="textModel" rows="4" cols="20">
+        
+      </textarea>
+    </div>
+    <div class="col-xs-3">
       <button type="button" class="btn btn-picture btn-block " ng-click="takePic()"><i class="fa fa-camera"></i> Take a picture</button>    
     </div>
   </div>
+  </div>
 </div>
+
 
